# Structure-from-Motion

./: .gitignore  CMakeLists.txt  README.md
include/: SfM.hpp  SfMException.hpp  bundleadjustment.hpp  camera.hpp  linefit.hpp  pch.hpp  test.hpp  types.hpp  utils.hpp
resource/data/figure/: config.json
resource/data/relief/: config.json
src/: SfM.cpp  bundleadjustment.cpp  camera.cpp  linefit.cpp  main.cpp  test.cpp  utils.cpp
